--- a/frontend-master/Dockerfile
+++ b/frontend-master/Dockerfile
@@ -1,15 +1,17 @@
-FROM node:16
+FROM node:20
 
-WORKDIR /src
+# Set the working directory to /usr/src/app
+WORKDIR /usr/src/app
 
+# Copy package files and install dependencies
 COPY package*.json ./
-COPY package-lock.json .
-
 RUN npm install
 
+# Copy the rest of the application code
 COPY . .
 
+# Expose the port the app runs on
 EXPOSE 3000
 
-CMD [ "npm", "start"]
-
+# Start the application
+CMD ["npm", "start"]
