--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 #use an official Node.js runtime as a parent image
-FROM node:20
+FROM node:20-alpine AS builder
 
 #set the working directory in the container 
 WORKDIR /usr/src/app
