--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -1,11 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
-  labels:
-    app: frontend
+  name: frontend
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: frontend
@@ -15,7 +13,22 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: react-app
+      - name: frontend
         image: drashanamahesh/react-app:latest
         ports:
-        - containerPort: 3000
+        - containerPort: 80
+        env:
+        - name: REACT_APP_BACKEND_URL
+          value: http://backend:5000 # Assuming backend service runs on port 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+spec:
+  selector:
+    app: frontend
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
