--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         ports:
         - containerPort: 5000
         env:
-        - name: MONGODB_URI
+        - name: MONGO_URI
           valueFrom:
             secretKeyRef:
               name: mongodb-atlas-secret
