--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGO_URI=mongodb+srv://darshanamahesh1600:RUYbGfimoTt7K5CZ@cluster0.8rfeoyy.mongodb.net/dhms
+CONN_STR ="mongodb+srv://darshanamahesh1600:9nm6xutfPnj70jeC@cluster0.8rfeoyy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_TOKEN_KEY = dkdsmdkdmdddd
